tests/NormalTests/paczka1/fuzzy1/25664837.err
Error in line 3: fHfSUDQ A653 22,5
Error in line 9: fHfSUDQ S713 156,93
Error in line 18: fHfSUDQ S71O 77,8
Error in line 20: rxWhjIfPD S173 87,7
Error in line 34: BecaKuXZ A653 79,7
Error in line 38: xHKVuOjhCf A507 0,5
